--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -4,6 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/purple"
     tools:context=".FunctionActivity">
+
+    <androidx.appcompat.widget.AppCompatButton
+
+        android:layout_width="140dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="624dp"
+        android:layout_weight="1"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:text="소리 변별"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
+
+        android:layout_width="140dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="284dp"
+        android:layout_weight="1"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:text="말하기 연습"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="175dp"
+        android:layout_height="257dp"
+        android:background="@drawable/secondfn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.246" />
+
+    <ImageView
+        android:layout_width="175dp"
+        android:layout_height="257dp"
+        android:background="@drawable/firstfn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.966" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
