--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -11,69 +11,74 @@
     <androidx.appcompat.widget.AppCompatButton
 
         android:layout_width="140dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="612dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="36dp"
         android:layout_weight="1"
-        android:background="@drawable/green_btn"
+        android:background="@drawable/start"
         android:fontFamily="@font/gbold"
         android:gravity="center"
-        android:text="소리 변별"
+
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
-
-        android:layout_width="140dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="284dp"
-        android:layout_weight="1"
-        android:background="@drawable/green_btn"
-        android:fontFamily="@font/gbold"
-        android:gravity="center"
-        android:text="말하기 연습"
-        android:textColor="@color/black"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="175dp"
-        android:layout_height="257dp"
+        android:layout_height="300dp"
         android:background="@drawable/secondfn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.246" />
+        app:layout_constraintVertical_bias="0.132" />
 
     <TextView
-        android:layout_width="280dp"
+        android:layout_width="210dp"
         android:layout_height="200dp"
+        android:background="@color/white"
         android:fontFamily="@font/gmedium"
-        android:gravity=""
-        android:text="소리를 듣고 맞는 카드를 골라보세요\n
-마지막에 결과를 확인하고 틀린 문항을 다시 연습해보세요"
+        android:gravity="center"
+        android:text="소리를 듣고 맞는 \n카드를 골라보세요\n\n
+마지막에 결과를 \n확인하고 틀린 문항을 \n다시 연습해보세요"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.192" />
 
     <ImageView
         android:layout_width="175dp"
-        android:layout_height="257dp"
+        android:layout_height="300dp"
         android:background="@drawable/firstfn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966" />
+        app:layout_constraintVertical_bias="0.828" />
+
+    <TextView
+        android:layout_width="210dp"
+        android:layout_height="200dp"
+        android:background="@color/white"
+        android:fontFamily="@font/gmedium"
+        android:gravity="center"
+        android:text="연습하고 싶은 \n문장을 입력하고\n\n
+소리를 듣고 따라 \n말하며 긴 문장을 \n연습해보세요"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.758" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
