--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-
+        android:id="@+id/start"
         android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_marginBottom="36dp"
