--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -21,12 +21,14 @@
 
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="350dp"
         android:layout_height="450dp"
         android:background="@drawable/white"
         android:fontFamily="@font/gmedium"
         android:gravity="center_horizontal"
         android:text="\n난청인(청각장애인)을 위한\n청능 재활 애플리케이션\n\n듣말퀴 : 듣고 말하고 퀴즈!"
+        android:textColor="@color/brown"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +38,10 @@
         app:layout_constraintVertical_bias="0.575" />
 
     <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="40dp"
         android:layout_height="60dp"
+
         android:background="@drawable/one"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,22 +75,35 @@
     <TextView
         android:layout_width="280dp"
         android:layout_height="50dp"
+        android:layout_marginTop="260dp"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="조음 능력을 \n향상시킬 수 있어요"
+        android:textColor="@color/brown"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+
+        app:layout_constraintVertical_bias="0.052" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="혼자서도 재활 훈련을\n 할 수 있어요"
+        android:textColor="@color/brown"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="358dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.525" />
 
     <TextView
         android:layout_width="280dp"
@@ -94,9 +111,14 @@
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="청능사를 만나기 어려운 \n상황에서 비대면으로\n 재활 훈련 할 수 있어요"
+        android:textColor="@color/brown"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="443dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.587"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/greennext"
