--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -40,10 +40,10 @@
     <TextView
         android:layout_width="210dp"
         android:layout_height="200dp"
-        android:background="@color/white"
+        android:background="@drawable/memo"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
-        android:text="소리를 듣고 맞는 \n카드를 골라보세요\n\n
+        android:text="\n소리를 듣고 맞는 \n카드를 골라보세요\n\n
 마지막에 결과를 \n확인하고 틀린 문항을 \n다시 연습해보세요"
         android:textSize="20dp"
         android:textColor="@color/brown"
@@ -68,10 +68,10 @@
     <TextView
         android:layout_width="210dp"
         android:layout_height="200dp"
-        android:background="@color/white"
+        android:background="@drawable/memo"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
-        android:text="연습하고 싶은 \n문장을 입력하고\n\n
+        android:text="\n연습하고 싶은 \n문장을 입력하고\n\n
 소리를 듣고 따라 \n말하며 긴 문장을 \n연습해보세요"
         android:textSize="20dp"
         android:textColor="@color/brown"
