--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -23,8 +23,8 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="350dp"
-        android:layout_height="450dp"
-        android:background="@drawable/white"
+        android:layout_height="400dp"
+        android:background="@drawable/info_white"
         android:fontFamily="@font/gmedium"
         android:gravity="center_horizontal"
         android:text="\n난청인(청각장애인)을 위한\n청능 재활 애플리케이션\n\n듣말퀴 : 듣고 말하고 퀴즈!"
@@ -35,7 +35,7 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575" />
+        app:layout_constraintVertical_bias="0.456" />
 
     <ImageView
         android:id="@+id/imageView6"
